--- a/AutoMaegler/Pages/Index.cshtml
+++ b/AutoMaegler/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 style="color: white" class="display-4">Sjællands Automægler</h1>
+    <p style="color: steelblue">For vores officielle Facebook side <a href="https://www.facebook.com/profile.php?id=100023827401656 " target="_blank">klik her</a>.</p>
 </div>
