--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using AutoMaegler.Pages.LogIn
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -17,7 +18,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
@@ -28,7 +29,35 @@
                     </ul>
                 </div>
             </div>
+            <ul class="navbar-nav">
+                @{
+                    if (LogInPageModel.LoggedInCustomer == null)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/LogIn/LogInPage">Login</a>
+                        </li>
+                    }
+                    else if (LogInPageModel.LoggedInEmployee == null)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/LogIn/LogInPage">Login</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item nav-link text-dark me-3">
+                            User: @LogInPageModel.LoggedInCustomer.Email
+                            User: @LogInPageModel.LoggedInEmployee.Email
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-page="/LogIn/LogOutPage">Logout</a>
+                        </li>
+                    }
+                }
+            </ul>
         </nav>
+       
     </header>
     <div class="container">
         <main role="main" class="pb-3">
