--- a/AutoMaegler/Pages/LogIn/LogInPage.cshtml
+++ b/AutoMaegler/Pages/LogIn/LogInPage.cshtml
@@ -9,13 +9,13 @@
     </div>
     <form method="post">
         <div class="form-group">
-            <label asp-for="UserName" class="col-form-label "></label>
+            <label asp-for="UserName" class="col-form-label text-white"></label>
             <div>
                 <input asp-for="UserName" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Password" class="col-form-label"></label>
+            <label asp-for="Password" class="col-form-label text-white"></label>
             <div>
                 <input asp-for="Password" />
             </div>
