--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Admin/CreateUser">Create User</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -51,7 +54,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/LogIn/LogOutPage">Logout</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/LogIn/LogOutPage">Logout</a>
                         </li>
                     }
                 }
