--- a/AutoMaegler/Pages/Index.cshtml
+++ b/AutoMaegler/Pages/Index.cshtml
@@ -5,6 +5,5 @@
 }
 
 <div class="text-center">
-    <h1 style="color: white" class="display-4">Sjællands Automægler</h1>
-    <p style="color: steelblue">For vores officielle Facebook side <a href="https://www.facebook.com/profile.php?id=100023827401656 " target="_blank">klik her</a>.</p>
+    <p style="color: white">For vores officielle Facebook side <a href="https://www.facebook.com/profile.php?id=100023827401656 " target="_blank">klik her</a>.</p>
 </div>
