add info in footer

--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -73,7 +73,17 @@
             <h4 style="color: white">Åbningstider</h4>
             <p style="color: white">Man-Fre    <span style="display:inline-block">09:00-17:30</span></p>
             <p style="color: white">Lørdag     <span>Kun efter aftale</span></p>
-            <p style="color: white">Lørdag     <span>Kun efter aftale</span></p>
+            <p style="color: white">Søndag     <span>10:00 - 16:00</span></p>
+        </div>
+        <div class="container">
+            <h4 style="color: white">Kontakt</h4>
+            <p style="color: white">Vojensvej 31-39</p>
+            <p style="color: white">2610 Rødovre</p>
+            <p style="color: white">Tlf.: 3672 6580</p>
+
+            <h5>Salgsafdelingen</h5>
+            <p>Tlf.: 3672 6580</p>
+            <p>E-mail: info@autom.dk</p>
         </div>
         <div class="container">
             &copy; 2025 - AutoMaegler - <a asp-area="" asp-page="/Privacy">Privacy</a>
