--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                     }
                     else
                     {
-                        <li class="nav-item nav-link text-dark me-3">
+                        <li class="nav-item nav-link text-white me-3">
                             @if (customer != null)
                             {
                                 <span>@customer.Email</span>
@@ -53,7 +53,7 @@
                             }
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/LogIn/LogOutPage">Logout</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/LogIn/LogOutPage">Logout</a>
                         </li>
                     }
                 }
