--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -21,10 +21,12 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Index">Home</a>
-                        </li>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Køb bil">Køb Bil</a>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Leasing">Leasing</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-page="/Sælg Bil">Sælg Bil</a>
+
                         </li>
                     </ul>
                 </div>
