Razor Social media

--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -138,6 +138,9 @@
             </div>
             <div class="footer-column">
                 <p>&copy; 2025 - AutoMaegler - <a href="/privacy">Privacy</a></p>
+                <a href="https://www.facebook.com/profile.php?id=100023827401656 " target="_blank"> <p style="color: white">Vores Facebook side <img style="height:40px; padding:10px;" src="https://upload.wikimedia.org/wikipedia/en/thumb/0/04/Facebook_f_logo_%282021%29.svg/768px-Facebook_f_logo_%282021%29.svg.png?20210818083032" </p></a>
+                <a href="https://www.instagram.com/sjaellandsautomaegler/ " target="_blank"> <p style="color: white">Vores Instagram side <img style="height:40px; padding:10px;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1200px-Instagram_logo_2022.svg.png?20220518162235"</p> </a>
+
             </div>
         </div>
     </footer>
