--- a/AutoMaegler/Pages/Index.cshtml
+++ b/AutoMaegler/Pages/Index.cshtml
@@ -10,4 +10,7 @@
     }
 </style>
 
-<div class="text-center"></div>
+<div class="text-center">
+    <img style="height:860px; padding:10px;" src="https://smooth-storage.aptoma.no/users/sndk/images/107048431.jpg?t[quality]=100&t[resize][width]=970&t[resize][height]=645&accessToken=7663c36287e3b1d5659e718353c7e87dc38957c2b3cae855a35a4f359122a8a5" />
+
+</div>
