--- a/AutoMaegler/Pages/Shared/_Layout.cshtml.css
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml.css
@@ -1,6 +1,7 @@
 ﻿/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -40,9 +41,33 @@ button.accept-policy {
 }
 
 .footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+}
+
+
+
+/*        */
+
+html, body {
+    height: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+body {
+    display: flex !important;
+    flex-direction: column !important;
+    font-family: Arial, sans-serif !important;
+    background: #f7f7f7 !important;
+    color: #333 !important;
+    line-height: 1.6 !important;
+}
+
+
+main {
+    flex: 1 !important;
 }
