Dependency injection of UserService and making of tables of employees and customers, aswell as link to the page.

--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                             <a class="nav-link text-white" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav">
+                        <a class="nav-link text-white" asp-area="" asp-page="/Admin/GetAllUsers">Users</a>
+                    </ul>
                 </div>
             </div>
             <ul class="navbar-nav">
