add  HTML tag til car info

--- a/AutoMaegler/Pages/Cars/Car.cshtml
+++ b/AutoMaegler/Pages/Cars/Car.cshtml
@@ -87,23 +87,38 @@
 </style>
 
 
-    <section class="gallery">
-        <img src="https://via.placeholder.com/800x500" alt="Billede af Kia Picanto">
-    </section>
+<section class="gallery">
+    <img src="https://via.placeholder.com/800x500" alt="Billede af Kia Picanto">
+</section>
 
-    <section class="details">
-        <h2>Kia Picanto 1.0 MPI Attraction Plus 66HK</h2>
-        <p class="price">Kr. 99.900</p>
-        <p>Årgang: 2021 | Kilometerstand: 25.000 km | Benzin | Manuel</p>
+<section class="details">
+    <h2>Kia Picanto 1.0 MPI Attraction Plus 66HK</h2>
+    <p class="price">Kr. 99.900</p>
+    <p>Årgang: 2021 | Kilometerstand: 25.000 km | Benzin | Manuel</p>
 
-        <table class="specs">
-            <tr><th>Motor</th><td>1.0 MPI</td></tr>
-            <tr><th>HK</th><td>66</td></tr>
-            <tr><th>Brændstof</th><td>Benzin</td></tr>
-            <tr><th>Gear</th><td>Manuel</td></tr>
-            <tr><th>Tophastighed</th><td>160 km/t</td></tr>
-            <tr><th>0-100 km/t</th><td>14.3 sek.</td></tr>
-        </table>
-    </section>
+    <table class="specs">
+        <tr><th>Id</th><td>123</td></tr>
+        <tr><th>Type af bil</th><td>Personbil</td></tr>
+        <tr><th>Mærke</th><td>Volkswagen</td></tr>
+        <tr><th>Farve</th><td>Sort</td></tr>
+        <tr><th>Brændstof</th><td>Benzin</td></tr>
+        <tr><th>Årgang</th><td>2020</td></tr>
+        <tr><th>Pris</th><td>150.000 kr.</td></tr>
+        <tr><th>Kilometerstand</th><td>45.000 km</td></tr>
+        <tr><th>Km/l</th><td>18.2</td></tr>
+        <tr><th>Tophastighed</th><td>195 km/t</td></tr>
+        <tr><th>Døre</th><td>5</td></tr>
+        <tr><th>HK</th><td>115</td></tr>
+        <tr><th>Gear</th><td>Manuel</td></tr>
+        <tr><th>Cylindre</th><td>3</td></tr>
+        <tr><th>Motorstørrelse</th><td>1.0 L</td></tr>
+        <tr><th>0-100 km/t</th><td>9.9 sek.</td></tr>
+        <tr><th>Længde</th><td>4.050 mm</td></tr>
+        <tr><th>Hjul</th><td>4</td></tr>
+        <tr><th>Trækevne</th><td>1.000 kg</td></tr>
+        <tr><th>Vægt</th><td>1.200 kg</td></tr>
+        <tr><th>Lagerstatus</th><td>På lager</td></tr>
+    </table>
+</section>
 
 
