tilføjet KM slider tilføjet KM filter metode

--- a/AutoMaegler/Pages/Cars/Cars.cshtml
+++ b/AutoMaegler/Pages/Cars/Cars.cshtml
@@ -92,7 +92,12 @@
         </select><br><br>
 
         <!-- Slider -->
-        <label for="justerbar">Juster værdi (0-100):</label>
+        <label for="justerbar">Juster Pris (0-100):</label>
+        <input type="range" id="justerbar" name="justerbar" min="0" max="100">
+        <span id="sliderValue">50</span><br><br>
+
+        <!-- Slider -->
+        <label for="justerbar">Juster KM (0-100):</label>
         <input type="range" id="justerbar" name="justerbar" min="0" max="100">
         <span id="sliderValue">50</span><br><br>
 
