--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -22,13 +22,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Index">Køb Bil</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Index">KØB BIL</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Privacy">Salg bil</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Privacy">SÆLG BIL</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Cars/Cars">Biler</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Cars/Cars">BILER</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-page="/OmOs">OM OS</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
