--- a/AutoMaegler/Pages/Admin/CreateUser.cshtml
+++ b/AutoMaegler/Pages/Admin/CreateUser.cshtml
@@ -3,11 +3,19 @@
 @{
 }
 
-<h1 class="text-white">Create a new User</h1>
+<h1 class="text-white">Opret Ny Bruger</h1>
 
 <div class="row">
     <div class="col-md-4">
         <form method="post">
+            <div class="form-group">
+                <label asp-for="@Model.FirstName" class="control-lable text-white"></label>
+                <input asp-for="@Model.FirstName" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="@Model.LastName" class="control-lable text-white"></label>
+                <input asp-for="@Model.LastName" class="form-control" />
+            </div>
             <div class="form-group">
                 <label asp-for="@Model.Email" class="control-lable text-white"></label>
                 <input asp-for="@Model.Email" class="form-control" />
@@ -15,9 +23,7 @@
             <div class="form-group">
                 <label asp-for="@Model.Password" class="control-lable text-white"></label>
                 <input asp-for="@Model.Password" class="form-control" />
-
             </div>
-
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
