Razor + EditCar.cshtml

--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -27,15 +27,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/Privacy">SÆLG BIL</a>
                         </li>
-                        <li class="nav-item">
+                        </ul>
+                        <ul class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/Cars/Cars">BILER</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/OmOs">OM OS</a>
-                        </li>
                     </ul>
                     <ul class="navbar-nav">
-                        <a class="nav-link text-white" asp-area="" asp-page="/Admin/GetAllUsers">Users</a>
+                        <a class ="nav-link text-white" asp-area="" asp-page="/Admin/GetAllUsers">BRUGERE</a>
+                        <li class="navbar-nav">
+                            <a class="nav-link text-white" asp-area="" asp-page="/OmOs">OM OS</a>
                     </ul>
                 </div>
             </div>
