EditCar, CreateCar, Razor

--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -27,9 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/Privacy">SÆLG BIL</a>
                         </li>
-                        </ul>
-                        <ul class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/Cars/Cars">BILER</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav">
                         <a class ="nav-link text-white" asp-area="" asp-page="/Admin/GetAllUsers">BRUGERE</a>
