change item til Car

--- a/AutoMaegler/Pages/Cars/Cars.cshtml
+++ b/AutoMaegler/Pages/Cars/Cars.cshtml
@@ -35,7 +35,7 @@
         .overlay-header {
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            align-Cars: center;
             border-bottom: 1px solid #ccc;
             padding-bottom: 10px;
             margin-bottom: 20px;
