--- a/AutoMaegler/Pages/Cars/CreateCar.cshtml
+++ b/AutoMaegler/Pages/Cars/CreateCar.cshtml
@@ -104,14 +104,14 @@
 		<span asp-validation-for="Car.MaxPull" class="text-danger"></span>
 	</div>
 	<div class="form-group">
-		<label asp-for="Car.Weight" class="control-lable"></label>
-		<input asp-for="Car.Weight" class="form-control" />
-		<span asp-validation-for="Car.Weight" class="text-danger"></span>
+		<label asp-for="@Model.Item.Name" class="control-label"></label>
+		<input asp-for="@Model.Item.Name" class="form-control" />
+		<span asp-validation-for="@Model.Item.Name" class="text-danger"></span>
 	</div>
 	<div class="form-group">
-		<label asp-for="Car.Status" class="control-lable"></label>
-		<input asp-for="Car.Status" class="form-control" />
-		<span asp-validation-for="Car.Status" class="text-danger"></span>
+		<label asp-for="@Model.Item.Price" class="control-label"></label>
+		<input asp-for="@Model.Item.Price" class="form-control" />
+		<span asp-validation-for="@Model.Item.Price" class="text-danger"></span>
 	</div>
 
 	<p>
