--- a/AutoMaegler/Pages/Cars/DeleteCar.cshtml
+++ b/AutoMaegler/Pages/Cars/DeleteCar.cshtml
@@ -5,9 +5,9 @@
 
 <h1>Delete Confirmation></h1>
 <div class="alert alert-danger">
-	<h5>Are you sure you want to delete Item - @Model.Item.Name</h5>
+	<h5>Are you sure you want to delete Car - @Model.Car.Name</h5>
 	<form method="post">
 		<button type="submit" class="btn btn-danger">Yes</button>
-		<a class="btn btn-primary" asp-page="/Item/GetAllItems">No</a>
+		<a class="btn btn-primary" asp-page="/Car/GetAllCars">No</a>
 	</form>
 </div>
