--- a/AutoMaegler/Pages/Cars/EditCar.cshtml
+++ b/AutoMaegler/Pages/Cars/EditCar.cshtml
@@ -46,12 +46,12 @@
 	<div class="form-group">
 		<label asp-for="Car.Mileage" class="control-lable"></label>
 		<input asp-for="Car.Mileage" class="form-control" />
-		<span asp-validation-for="Car.Milage" class="text-danger"></span>
+		<span asp-validation-for="Car.Mileage" class="text-danger"></span>
 	</div>
 	<div class="form-group">
-		<label asp-for="Car.KmPrl" class="control-lable"></label>
-		<input asp-for="Car.KmPrl" class="form-control" />
-		<span asp-validation-for="Car.KmPrl" class="text-danger"></span>
+		<label asp-for="Car.KmPrL" class="control-lable"></label>
+		<input asp-for="Car.KmPrL" class="form-control" />
+		<span asp-validation-for="Car.KmPrL" class="text-danger"></span>
 	</div>
 	<div class="form-group">
 		<label asp-for="Car.TopSpeed" class="control-lable"></label>
@@ -123,5 +123,5 @@
 </form>
 
 <p>
-	<a asp-page="/Item/GetAllItems">Back to List</a>
+	<a asp-page="/Car/GetAllCars">Back to List</a>
 </p>
