--- a/AutoMaegler/Pages/Cars/CreateCar.cshtml
+++ b/AutoMaegler/Pages/Cars/CreateCar.cshtml
@@ -104,9 +104,9 @@
 		<span asp-validation-for="Car.MaxPull" class="text-danger"></span>
 	</div>
 	<div class="form-group">
-		<label asp-for="@Model.Item.Name" class="control-label"></label>
-		<input asp-for="@Model.Item.Name" class="form-control" />
-		<span asp-validation-for="@Model.Item.Name" class="text-danger"></span>
+		<label asp-for="@Model.Car.Model" class="control-label"></label>
+		<input asp-for="@Model.Car.Model" class="form-control" />
+		<span asp-validation-for="@Model.Car.Model" class="text-danger"></span>
 	</div>
 	<div class="form-group">
 		<label asp-for="@Model.Item.Price" class="control-label"></label>
