--- a/AutoMaegler/Pages/Cars/DeleteCar.cshtml
+++ b/AutoMaegler/Pages/Cars/DeleteCar.cshtml
@@ -5,7 +5,7 @@
 
 <h1>Delete Confirmation></h1>
 <div class="alert alert-danger">
-	<h5>Are you sure you want to delete Car - @Model.Car.Name</h5>
+	<h5>Are you sure you want to delete Car - @Model.Car.Model</h5>
 	<form method="post">
 		<button type="submit" class="btn btn-danger">Yes</button>
 		<a class="btn btn-primary" asp-page="/Car/GetAllCars">No</a>
