--- a/AutoMaegler/Pages/Cars/CreateCar.cshtml
+++ b/AutoMaegler/Pages/Cars/CreateCar.cshtml
@@ -46,12 +46,12 @@
 	<div class="form-group">
 		<label asp-for="Car.Mileage" class="control-lable"></label>
 		<input asp-for="Car.Mileage" class="form-control" />
-		<span asp-validation-for="Car.Milage" class="text-danger"></span>
+		<span asp-validation-for="Car.Mileage" class="text-danger"></span>
 	</div>
 	<div class="form-group">
-		<label asp-for="Car.KmPrl" class="control-lable"></label>
-		<input asp-for="Car.KmPrl" class="form-control" />
-		<span asp-validation-for="Car.KmPrl" class="text-danger"></span>
+		<label asp-for="Car.KmPrL" class="control-lable"></label>
+		<input asp-for="Car.KmPrL" class="form-control" />
+		<span asp-validation-for="Car.KmPrL" class="text-danger"></span>
 	</div>
 	<div class="form-group">
 		<label asp-for="Car.TopSpeed" class="control-lable"></label>
@@ -109,9 +109,9 @@
 		<span asp-validation-for="@Model.Car.Model" class="text-danger"></span>
 	</div>
 	<div class="form-group">
-		<label asp-for="@Model.Item.Price" class="control-label"></label>
-		<input asp-for="@Model.Item.Price" class="form-control" />
-		<span asp-validation-for="@Model.Item.Price" class="text-danger"></span>
+		<label asp-for="@Model.Car.Price" class="control-label"></label>
+		<input asp-for="@Model.Car.Price" class="form-control" />
+		<span asp-validation-for="@Model.Car.Price" class="text-danger"></span>
 	</div>
 
 	<p>
