--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -14,6 +14,9 @@
     <header style="background-color: darkblue">
         <nav style="background-color: midnightblue" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container">
+                <a href="index.html">
+                    <img src="https://www.autom.dk/img/logo.png" style="height: 80px; padding: 10px;">
+                </a>
                 <img style="height:80px; padding:10px;" src="https://www.autom.dk/img/logo.png" />
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
