--- a/AutoMaegler/Pages/Cars/Cars.cshtml
+++ b/AutoMaegler/Pages/Cars/Cars.cshtml
@@ -135,10 +135,10 @@
             {
                 <tr class="btn-secondary">
                     <td>
-                        @Car.Id
+                        @Car.Brand
                     </td>
                     <td>
-                        @Car.Name
+                        @Car.Model
                     </td>
                     <td>
                         @Car.Price
