added GetMockCars i MockCars rettet constructor i cars.cshtml.cs added DBCarService i Carservice Added constructor i Carservice added default constructor i carservice rettet savecars() i DBCarservice

--- a/AutoMaegler/Pages/Cars/Cars.cshtml
+++ b/AutoMaegler/Pages/Cars/Cars.cshtml
@@ -129,9 +129,9 @@
 
 <table>
     <tbody>
-        @if (Model.Car != null)
+        @if (Model.Cars != null)
         {
-            foreach (var Car in Model.Car)
+            foreach (var Car in Model.Cars)
             {
                 <tr class="btn-secondary">
                     <td>
