--- a/AutoMaegler/Pages/Cars/Car.cshtml
+++ b/AutoMaegler/Pages/Cars/Car.cshtml
@@ -100,7 +100,7 @@
         <tr><th>Id</th><td>123</td></tr>
         <tr><th>Type af bil</th><td>Personbil</td></tr>
         <tr><th>Mærke</th><td>Volkswagen</td></tr>
-        <tr><th>Model</th><td>Passat</td></tr>
+        <tr><th>CarModel</th><td>Passat</td></tr>
         <tr><th>Farve</th><td>Sort</td></tr>
         <tr><th>Brændstof</th><td>Benzin</td></tr>
         <tr><th>Årgang</th><td>2020</td></tr>
