--- a/AutoMaegler/Pages/Cars/EditCar.cshtml
+++ b/AutoMaegler/Pages/Cars/EditCar.cshtml
@@ -14,9 +14,9 @@
 		<span asp-validation-for="Car.Type" class="text-danger"></span>
 	</div>
 	<div class="form-group">
-		<label asp-for="Car.Model" class="control-lable"></label>
-		<input asp-for="Car.Model" class="form-control" />
-		<span asp-validation-for="Car.Model" class="text-danger"></span>
+		<label asp-for="Car.CarModel" class="control-lable"></label>
+		<input asp-for="Car.CarModel" class="form-control" />
+		<span asp-validation-for="Car.CarModel" class="text-danger"></span>
 	</div>
 	<div class="form-group">
 		<label asp-for="Car.Brand" class="control-lable"></label>
@@ -26,12 +26,12 @@
 	<div class="form-group">
 		<label asp-for="Car.Color" class="control-lable"></label>
 		<input asp-for="Car.Color" class="form-control" />
-		<span asp-validation-for="Car.Model" class="text-danger"></span>
+		<span asp-validation-for="Car.Color" class="text-danger"></span>
 	</div>
 	<div class="form-group">
 		<label asp-for="Car.Fuel" class="control-lable"></label>
 		<input asp-for="Car.Fuel" class="form-control" />
-		<span asp-validation-for="Car.Model" class="text-danger"></span>
+		<span asp-validation-for="Car.Fuel" class="text-danger"></span>
 	</div>
 	<div class="form-group">
 		<label asp-for="Car.ModelYear" class="control-lable"></label>
