--- a/AutoMaegler/Pages/Cars/Cars.cshtml
+++ b/AutoMaegler/Pages/Cars/Cars.cshtml
@@ -138,7 +138,7 @@
                         @Car.Brand
                     </td>
                     <td>
-                        @Car.CarModel
+                        @Car.Model
                     </td>
                     <td>
                         @Car.Price
