--- a/AutoMaegler/Pages/Admin/CreateUser.cshtml
+++ b/AutoMaegler/Pages/Admin/CreateUser.cshtml
@@ -11,18 +11,22 @@
             <div class="form-group">
                 <label asp-for="@Model.FirstName" class="control-lable text-white"></label>
                 <input asp-for="@Model.FirstName" class="form-control" />
+                <span>asp-validation-for="@Model.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="@Model.LastName" class="control-lable text-white"></label>
                 <input asp-for="@Model.LastName" class="form-control" />
+                <span>asp-validation-for="@Model.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="@Model.Email" class="control-lable text-white"></label>
                 <input asp-for="@Model.Email" class="form-control" />
+                <span>asp-validation-for="@Model.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="@Model.Password" class="control-lable text-white"></label>
                 <input asp-for="@Model.Password" class="form-control" />
+                <span>asp-validation-for="@Model.Password" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
