--- a/AutoMaegler/Pages/EditUser.cshtml
+++ b/AutoMaegler/Pages/EditUser.cshtml
@@ -52,6 +52,6 @@
             </div>
         }
     <div class="form-group">
-        <input type="submit" value="Update" class="btn btn-primary" />
+        <input type="submit" value="Opdater" class="btn btn-primary" />
     </div>
 </form>
