--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/OmOs">OM OS</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-page="/Order/GetAllOrders">Ordre</a>
                     </ul>
                     <ul class="navbar-nav">
                         <a class="nav-link text-white" asp-area="" asp-page="/Admin/GetAllUsers">Users</a>
