--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                     <ul class="navbar-nav">
                         <a class ="nav-link text-white" asp-area="" asp-page="/Admin/GetAllUsers">BRUGERE</a>
                         <li class="navbar-nav">
-                            <a class="nav-link text-white" asp-area="" asp-page="/OmOs">OM OS</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/OmOs/OmOs">OM OS</a>
                     </ul>
                 </div>
             </div>
