--- a/AutoMaegler/Pages/OmOs/OmOs.cshtml
+++ b/AutoMaegler/Pages/OmOs/OmOs.cshtml
@@ -3,6 +3,7 @@
 @{
 }
 
+<body>
 
     <style>
         html, body {
@@ -14,7 +15,7 @@
         }
 
         .background {
-            background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRuBw2pTqXvByPYuWP1MCG3e7OCjxRJ7M8wmA&s");
+        background-image: url("https://scontent-cph2-1.xx.fbcdn.net/v/t39.30808-6/474307000_1864458244087000_6732845790224547520_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=5NhBME1NVsgQ7kNvwEkma0i&_nc_oc=AdnW0SU4oRFdD-6BThztXNMihCNoEU1mc22WwOUnmykLDxA1CNizgH20cwfSkNmqraA&_nc_zt=23&_nc_ht=scontent-cph2-1.xx&_nc_gid=xSDFiwNW8dr4nXi1KywAnw&oh=00_AfK5pi9Z1DMbI_xSPv7m1twYDJTszNlWKHyYYrZ2rFH75Q&oe=68335FF1");
             background-size: cover;
             background-position: center;
             height: 50%;
@@ -31,13 +32,21 @@
             background-color: rgba(0, 0, 0, 0.5); /* dark overlay */
         }
 
+        .page-wrapper {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
         .content {
             position: relative;
             color: white;
             text-align: center;
             top: 50%;
             padding: 0 20px;
+            flex: 1;
         }
+
     </style>
 
     <div class="background">
@@ -54,3 +63,5 @@
         </div>
     </div>
 </body>
+
+<div style="</footer>height: 300px;"></div>
