--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-white" asp-area="" asp-page="/Cars/Cars">BILER</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Privacy">SÆLG BIL</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/SellCars/SellCar">SÆLG BIL</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/Cars/Cars">BILER</a>
@@ -97,6 +97,7 @@
             margin: 0 auto;
             gap: 30px;
             flex-wrap: wrap;
+  
         }
 
         .footer-column {
