change OnConfiguring() in CarDBContext added table name on Car model fix name error in Cars.cshtml removed hardcoded list in Cars.cshtml.cs removed form inputs there did not match DB fixed redirectToPage from GetAllCars to /Cars/Cars Removed unused form from EditCar removed GetMockCars from CarService() in Carservice Fixed naming and using await in DBCarServie Nuget Packages in AutoMaegler.csproj added singleton carservice in program.cs

--- a/AutoMaegler/Pages/Cars/Cars.cshtml
+++ b/AutoMaegler/Pages/Cars/Cars.cshtml
@@ -133,7 +133,7 @@
         {
             foreach (var Car in Model.Cars)
             {
-                <tr class="btn-secondary">
+                <tr class="btn-secondary" style="cursor: pointer;" onclick="window.location='@Url.Page("/Cars/Car", new { id = Car.Id })'">
                     <td>
                         @Car.Brand
                     </td>
@@ -144,7 +144,7 @@
                         @Car.Price
                     </td>
                 </tr>
-            }
+            } 
         }
     </tbody>
 </table>
