--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -22,13 +22,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Cars/Cars">BILER</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Cars/Cars">KØB BIL</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/SellCars/SellCar">SÆLG BIL</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Cars/Cars">BILER</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Cars/LeasingCar">LEASING</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-page="/Order/GetAllOrders">Ordre</a>
