--- a/AutoMaegler/Pages/Cars/EditCar.cshtml
+++ b/AutoMaegler/Pages/Cars/EditCar.cshtml
@@ -79,6 +79,10 @@
 		<span asp-validation-for="Car.Cylinders" class="text-danger"></span>
 	</div>
 	<div class="form-group">
+		<label asp-for="Car.MotorSize" class="control-lable"></label>
+		<input asp-for="Car.MotorSize" class="form-control" />
+		<span asp-validation-for="Car.MotorSize" class="text-danger"></span>
+	<div class="form-group">
 		<label asp-for="Car.ZeroToOneHundred" class="control-lable"></label>
 		<input asp-for="Car.ZeroToOneHundred" class="form-control" />
 		<span asp-validation-for="Car.ZeroToOneHundred" class="text-danger"></span>
