--- a/AutoMaegler/Pages/Shared/_Layout.cshtml
+++ b/AutoMaegler/Pages/Shared/_Layout.cshtml
@@ -32,46 +32,40 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav">
-                        <a class ="nav-link text-white" asp-area="" asp-page="/Admin/GetAllUsers">BRUGERE</a>
+                        @if (User.IsInRole("Employee"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-page="/Users/Admin/GetAllUsers">Brugere</a>
+                            </li>
+                        }
+
                         <li class="navbar-nav">
                             <a class="nav-link text-white" asp-area="" asp-page="/OmOs">OM OS</a>
                     </ul>
                 </div>
             </div>
             <ul class="navbar-nav">
-                @{
-                    var customer = LogInPageModel.LoggedInCustomer;
-                    var employee = LogInPageModel.LoggedInEmployee;
-
-                    if (customer == null && employee == null)
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/LogIn/LogInPage">Login</a>
-                        </li>
-                    }
-                    else
-                    {
-                        <li class="nav-item nav-link text-white me-3">
-                            @if (customer != null)
-                            {
-                                <span>@customer.Email</span>
-                            }
-                            else if (employee != null)
-                            {
-                                <span>@employee.Email</span>
-                            }
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/LogIn/LogOutPage">Logout</a>
-                        </li>
-                    }
+                @if (User.Identity != null && User.Identity.IsAuthenticated)
+                {
+                    <li class="nav-item nav-link text-white me-3">
+                        <span>@User.Identity.Name</span>
+                    </li>
                    
+                    <li class="nav-item">
+                        <a class="nav-link text-white" asp-area="" asp-page="/Users/LogIn/LogOutPage">Logout</a>
+                    </li>
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <a class="nav-link text-white" asp-area="" asp-page="/Users/LogIn/LogInPage">Login</a>
+                    </li>
                 }
             </ul>
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-5">
             @RenderBody()
         </main>
     </div>
@@ -119,7 +113,7 @@
         }
 
         #footer-h5{
-            margin-top: 40px;
+            margin-top: 0px;
         }
     </style>
 
